# qa_analysis

./: .gitignore  COLOR_SYSTEM_IMPLEMENTATION.md  LICENSE  README.md  README_POETRY.md  app.py  main.py  pyproject.toml  requirements.txt  simple_test.py  streamlit_app.py  test_pipeline.py
config/: pipeline_config.yaml  settings.py
data/: dataloader.py
data/shards/: shard_000.csv  shard_001.csv  shard_002.csv  shard_003.csv  shard_004.csv  shard_005.csv  shard_006.csv  shard_008.csv  shard_009.csv  shard_010.csv  shard_011.csv  shard_012.csv  shard_013.csv  shard_014.csv  shard_015.csv  shard_016.csv  shard_017.csv  shard_018.csv  shard_019.csv  shard_021.csv  shard_022.csv  shard_023.csv  shard_024.csv  shard_025.csv  shard_026.csv  shard_027.csv  shard_028.csv  shard_029.csv  shard_030.csv  shard_031.csv  shard_032.csv  shard_033.csv  shard_034.csv  shard_035.csv  shard_036.csv  shard_037.csv  shard_038.csv  shard_039.csv  shard_040.csv  shard_041.csv  (+28 more)
jupyter/: projeto_av02_pln_lucas_cavalcante.ipynb
models/: __init__.py  base_model.py  distilbert_model.py  roberta_model.py
outputs/20260202_104336/: metrics.json  metrics_summary.md  (+1 more)
pages/: 01_analises_avancadas.py  __init__.py  dashboard.py  data_management.py  model_analysis.py  results_visualization.py
scripts/: run_examples.sh
src/: __init__.py  base_model.py  color_manager.py  color_utils.py  data_loader.py  logger_config.py  main.py  metrics_calculator.py  model_selector.py  palettes.py  parallel_processor.py  pipeline_controller.py
tests/: __init__.py  test_color_system.py  test_color_system_simple.py  test_data_loader.py  test_metrics_overlap.py  test_model_selector.py  tests_metrics_overlap.py
utils/: data_manager.py  helpers.py  import_export.py  metrics.py  parallel_processor.py
(+33 files in other folders)
