[tool.poetry]
name = "qa-analysis-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for QA model analysis and comparison"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "config"}, {include = "data"}, {include = "models"}, {include = "utils"}, {include = "pages"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.28.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
torch = "^2.0.0"
transformers = "^4.30.0"
plotly = "^5.15.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qa-dashboard = "streamlit_app:main"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["config", "data", "models", "utils", "pages"]