[tool.poetry]
name = "qa-pipeline"
version = "0.1.0"
description = "Modular QA pipeline with parallel processing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^1.3"
torch = "^2.0.0"
transformers = "^4.30"
tqdm = "^4.0"
pyyaml = "^6.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
streamlit = "^1.30"
plotly = "^5.20"
altair = "^5.0"
pyarrow = "^11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
qa-pipeline = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"